<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Orange_Light"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/muli_black"
            android:padding="10dp"
            android:text="@string/welcome_prompt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_loggedin_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:text="Sample Text"
            android:textAllCaps="true"
            android:textColor="@color/Orange_Deep"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/login_imageview"
            android:layout_width="match_parent"
            android:layout_height="356dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:src="@drawable/courseimage"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/muli_bold"
                android:text="@string/logged_in_as"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/role_loggedin_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="45dp"
                android:layout_weight="1"
                android:fontFamily="@font/muli_bold"
                android:text="Sample Text"
                android:textAlignment="center"
                android:textColor="@color/Orange_Deep"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/sign_out" />

        <ProgressBar
            android:id="@+id/progressBar_signOut"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>