<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Orange_Light"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <Button


        android:id="@+id/bckbtn_coursepage"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_back"
        android:drawableTint="@color/Orange_Deep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/homeBtn_coursepage"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_home"
        android:drawableTint="@color/Orange_Deep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/bckbtn_coursepage"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/coursecode_coursepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/muli_black"
            android:padding="2dp"
            android:text="MCG4308"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/coursename_coursepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/muli_black"
            android:padding="2dp"
            android:text="Mechanical Engineering"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/muli_black"
                android:padding="2dp"
                android:text="@string/instructor"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/instructor_coursepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/muli_bold"
                android:padding="2dp"
                android:text="Philipe Entendre"
                android:clickable="false"
                android:background="@color/Orange_Light"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:padding="2dp"
            android:text="@string/course_description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/description_coursepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:clickable="false"
            android:fontFamily="@font/muli_bold"
            android:padding="8dp"
            android:text="resistance temperature detector (RTD) with a time constant = 2 s was used to measure the temperature of coee contained in three thermos  asks, to be referred to as A, B and C. After the RTD was"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/view9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/muli_black"
                android:padding="2dp"
                android:text="@string/cap"
                android:textColor="@color/Orange_Deep"
                android:textSize="14sp" />

            <EditText

                android:id="@+id/capacity_coursepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/muli_bold"
                android:padding="2dp"
                android:text="200"
                android:clickable="false"
                android:background="@color/Orange_Light"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/assign_unassign_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/loading_coursepage"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>